Sign-up validations
Sign up validation of email and setting route to login page. Toast set-up for the invalid input. Use of Usehistory of router-dom

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,10 @@ a{
     max-height: max-content;
     margin: 25px auto;
   }
+
+#toast-container{
+  color: #c62828 red;
+  top: 30px !important;
+  right: 20px !important;
+  left: auto !important;
+}
